mod index commit

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <img class="logo" src="./img/cascaralogo.png" height="65">
             </a>
             <ul class="menu">
-                <li class="li"><a href="./pages/talleres.html">Talleres</a></li>
-                <li class="li"><a href="./pages/workshops.html">Workshops</a></li>
-                <li class="li"><a href="./pages/contacto.html">Contacto</a></li>
+                <li><a class="li" href="./pages/talleres.html">Talleres</a></li>
+                <li><a class="li" href="./pages/workshops.html">Workshops</a></li>
+                <li><a class="li" href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -59,10 +59,10 @@
 
     <section class="container">
         <div class="botones">
-            <a href="./pages/talleres.html" target="_blank"> Talleres</a>
+            <a class="linknav" href="./pages/talleres.html" target="_blank"> Talleres</a>
         </div>
         <div class="botones">
-            <a href="./pages/workshops.html" target="_blank"> Workshops</a>
+            <a class="linknav" href="./pages/workshops.html" target="_blank"> Workshops</a>
         </div>
     </section>
 
