--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <h1 class="title">Cascara Taller</h1>
 
     <section class="container">
-        <div class="acercade">
-            <p><b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            <p class="acercade"><b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et
                     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip
@@ -51,8 +50,7 @@
                     except to obtain some advantage from it? But who has any right to find fault with a man who chooses
                     to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no
                     resultant pleasure?"</b></p>
-        </div>
-        <img class="mapa" src="./img/mapa.png">
+        <img class="mapa" src="./img/mapa.png" alt="ubicacion">
     </section>
 
     <h2 class="conocenos">↓ CONOCE MÁS SOBRE NUESTROS CURSOS ↓</h2>
