--- a/index.html
+++ b/index.html
@@ -29,33 +29,34 @@
         </nav>
     </header>
 
-    <h1 class="title">Cascara Taller</h1>
-
     <section class="container">
-            <p class="acercade"><b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum." "But I must explain to you how all this mistaken idea of
-                    denouncing pleasure and praising pain was born and I will give you a complete account of the system,
-                    and expound the actual teachings of the great explorer of the truth, the master-builder of human
-                    happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because
-                    those who do not know how to pursue pleasure rationally encounter consequences that are extremely
-                    painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because
-                    it is pain, but because occasionally circumstances occur in which toil and pain can procure him some
-                    great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise,
-                    except to obtain some advantage from it? But who has any right to find fault with a man who chooses
-                    to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no
-                    resultant pleasure?"</b></p>
-        <img class="mapa" src="./img/mapa.png" alt="ubicacion">
+        <h1 class="title">Cascara Taller</h1>
+        <p class="acercade"><b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut
+                labore
+                et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum. But I must explain to you how all this mistaken idea of
+                denouncing pleasure and praising pain was born and I will give you a complete account of the system,
+                and expound the actual teachings of the great explorer of the truth, the master-builder of human
+                happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because
+                those who do not know how to pursue pleasure rationally encounter consequences that are extremely
+                painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because
+                it is pain, but because occasionally circumstances occur in which toil and pain can procure him some
+                great pleasure."</b></p>
+        <br><br>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.6778122393566!2d-58.5714187250605!3d-34.43493814860285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bca503331d79b9%3A0xe125056f1b175ae9!2sCASCARA%20TALLER!5e0!3m2!1ses-419!2sar!4v1696646809281!5m2!1ses-419!2sar">
+        </iframe>
     </section>
-
+    
     <h2 class="conocenos">↓ CONOCE MÁS SOBRE NUESTROS CURSOS ↓</h2>
-
-    <section class="container">
+    
+    <section class="container2">
         <div class="botones">
             <a class="linknav" href="./pages/talleres.html" target="_blank"> Talleres</a>
         </div>
@@ -64,16 +65,18 @@
         </div>
     </section>
 
+    <br>
+
     <footer>
         <div class="ig">
             <h3>Seguinos en Instagram!</h3>
-            <div class="iglogo">
+            <div>
                 <a href="https://www.instagram.com/cascara_taller/" target="_blank">
-                    <img src="./img/iglogo.png" alt="iglogo" height="75px">
+                    <img class="iglogo" src="./img/iglogo.png" alt="iglogo" height="55px">
                 </a>
             </div>
         </div>
-        <div class="copy">
+        <div>
             <a class="copy" href="https://www.linkedin.com/in/andreavnuñez/" target="_blank">
                 <b>&copy Copyright Andrea Nuñez - 2023</b>
             </a>
