--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         </nav>
     </header>
 
-    <section class="container">
+    <section class="container1">
         <h1 class="title">Cascara Taller</h1>
+        <!--Se completara con un texto personalizado para el taller acerca de su trayectoria-->
         <p class="acercade"><b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut
                 labore
@@ -55,7 +56,7 @@
     </section>
     
     <h2 class="conocenos">↓ CONOCE MÁS SOBRE NUESTROS CURSOS ↓</h2>
-    
+    <!--Cada link lleva a la pagina correspondiente-->
     <section class="container2">
         <div class="botones">
             <a class="linknav" href="./pages/talleres.html" target="_blank"> Talleres</a>
