--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,39 +1,74 @@
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-widht, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
 </head>
-<body>
-    <h1>Contacto</h1>
-    <form>
-        <fieldset>
-            <label for="nombre">Nombre:</label>
-            <input type="text" name="nombre" placeholder="Nombre">
-            <br>
-            <label for="email">Mail:</label>
-            <input type="email" name="email" placeholder="Email">
-            <br>
-            <label for="taller">Taller/Workshop:</label>
-            <select>
-                <option>Dibujo</option>
-                <option>Manga</option>
-                <option>Gitarra</option>
-                <option>Teatro</option>
-                <option>Encuadernación</option>
-                <option>Lettering</option>
-            </select>
-            <br>
-            <label for="mensaje">Mensaje adicional:</label>
-            <textarea name="mensaje" placeholder="Dejanos acá tu consulta!"></textarea>
-            <br>
-            <input type="submit" name="enviar" value="Enviar">
-        </fieldset>
-    </form>
-</body>
+    <body>
+
+        <header>
+            <nav class="nav">
+                <a href="../index.html">
+                    <img class="logo" src="../img/cascaralogo.png" alt="logo-taller">
+                </a>
+                <ul class="menu">
+                    <li><a class="li" href="../pages/talleres.html">Talleres</a></li>
+                    <li><a class="li" href="../pages/workshops.html">Workshops</a></li>
+                    <li><a class="li" href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <h1>Contacto</h1>
+        <form>
+            <fieldset>
+                <label for="nombre">Nombre:</label>
+                <input type="text" name="nombre" placeholder="Nombre">
+                <br>
+                <label for="email">Mail:</label>
+                <input type="email" name="email" placeholder="Email">
+                <br>
+                <label for="taller">Taller/Workshop:</label>
+                <select>
+                    <option>Dibujo</option>
+                    <option>Manga</option>
+                    <option>Gitarra</option>
+                    <option>Teatro</option>
+                    <option>Encuadernación</option>
+                    <option>Lettering</option>
+                </select>
+                <br>
+                <label for="mensaje">Mensaje adicional:</label>
+                <textarea name="mensaje" placeholder="Dejanos acá tu consulta!"></textarea>
+                <br>
+                <input type="submit" name="enviar" value="Enviar">
+            </fieldset>
+        </form>
+
+        <footer>
+            <div class="ig">
+                <h3>Seguinos en Instagram!</h3>
+                <div>
+                    <a href="https://www.instagram.com/cascara_taller/" target="_blank">
+                        <img class="iglogo" src="../img/iglogo.png" alt="ig-logo">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <a class="copy" href="https://www.linkedin.com/in/andreavnuñez/" target="_blank">
+                    <b>&copy Copyright Andrea Nuñez - 2023</b>
+                </a>
+            </div>
+        </footer>
+
+    </body>
+</html>
