--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -1,12 +1,50 @@
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-widht, initial-scale=1.0">
     <title>Talleres</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    
-</body>
+    <body>
+        
+        <header>
+            <nav class="nav">
+                <a href="../index.html">
+                    <img class="logo" src="../img/cascaralogo.png" alt="logo-taller">
+                </a>
+                <ul class="menu">
+                    <li><a class="li" href="../pages/talleres.html">Talleres</a></li>
+                    <li><a class="li" href="../pages/workshops.html">Workshops</a></li>
+                    <li><a class="li" href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <footer>
+            <div class="ig">
+                <h3>Seguinos en Instagram!</h3>
+                <div>
+                    <a href="https://www.instagram.com/cascara_taller/" target="_blank">
+                        <img class="iglogo" src="../img/iglogo.png" alt="ig-logo">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <a class="copy" href="https://www.linkedin.com/in/andreavnuñez/" target="_blank">
+                    <b>&copy Copyright Andrea Nuñez - 2023</b>
+                </a>
+            </div>
+        </footer>
+
+    </body>
+
+</html>
