--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -14,37 +14,77 @@
     <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
 </head>
 
-    <body>
-        
-        <header>
-            <nav class="nav">
-                <a href="../index.html">
-                    <img class="logo" src="../img/cascaralogo.png" alt="logo-taller">
-                </a>
-                <ul class="menu">
-                    <li><a class="li" href="../pages/talleres.html">Talleres</a></li>
-                    <li><a class="li" href="../pages/workshops.html">Workshops</a></li>
-                    <li><a class="li" href="../pages/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
+<body>
 
-        <footer>
-            <div class="ig">
-                <h3>Seguinos en Instagram!</h3>
-                <div>
-                    <a href="https://www.instagram.com/cascara_taller/" target="_blank">
-                        <img class="iglogo" src="../img/iglogo.png" alt="ig-logo">
-                    </a>
-                </div>
+    <header>
+        <nav class="nav">
+            <a href="../index.html">
+                <img class="logo" src="../img/cascaralogo.png" alt="logo-taller">
+            </a>
+            <ul class="menu">
+                <li><a class="li" href="../pages/talleres.html">Talleres</a></li>
+                <li><a class="li" href="../pages/workshops.html">Workshops</a></li>
+                <li><a class="li" href="../pages/contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <br><br>
+    <div class="containerCards">
+        <div class="card">
+            <figure>
+                <img src="../img/wencuadernacion.jpg" alt="wcuadernos">
+            </figure>
+            <div class="contenido">
+                <h3>Encuadernación</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
+                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
+                    quis corporis minima!</p>
+                <a href="../pages/contacto.html"> Inscribite!</a>    
             </div>
+        </div>
+        <div class="card">
+            <figure>
+                <img src="../img/wlettering.jpg" alt="wlettering">
+            </figure>
+            <div class="contenido">
+                <h3>Lettering</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
+                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
+                    quis corporis minima!</p>
+                <a href="../pages/contacto.html"> Inscribite!</a>    
+            </div>
+        </div>
+        <div class="card">
+            <figure>
+                <img src="../img/wmacetas.jpg" alt="wmacetas">
+            </figure>
+            <div class="contenido">
+                <h3>Efecto Piedra</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
+                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
+                    quis corporis minima!</p>
+                <a href="../pages/contacto.html"> Inscribite!</a>    
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+    <footer>
+        <div class="ig">
+            <h3>Seguinos en Instagram!</h3>
             <div>
-                <a class="copy" href="https://www.linkedin.com/in/andreavnuñez/" target="_blank">
-                    <b>&copy Copyright Andrea Nuñez - 2023</b>
+                <a href="https://www.instagram.com/cascara_taller/" target="_blank">
+                    <img class="iglogo" src="../img/iglogo.png" alt="ig-logo">
                 </a>
             </div>
-        </footer>
+        </div>
+        <div>
+            <a class="copy" href="https://www.linkedin.com/in/andreavnuñez/" target="_blank">
+                <b>&copy Copyright Andrea Nuñez - 2023</b>
+            </a>
+        </div>
+    </footer>
 
-    </body>
+</body>
 
 </html>
