--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -28,7 +28,47 @@
                 </ul>
             </nav>
         </header>
-
+        <br><br>
+        <div class="containerCards">
+            <div class="card">
+                <figure>
+                    <img src="../img/wencuadernacion.jpg" alt="wcuadernos">
+                </figure>
+                <div class="contenido">
+                    <h3>Encuadernación</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
+                        veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
+                        quis corporis minima!</p>
+                    <a href="../pages/contacto.html"> Inscribite!</a>    
+                </div>
+            </div>
+            <div class="card">
+                <figure>
+                    <img src="../img/wlettering.jpg" alt="wlettering">
+                </figure>
+                <div class="contenido">
+                    <h3>Lettering</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
+                        veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
+                        quis corporis minima!</p>
+                    <a href="../pages/contacto.html"> Inscribite!</a>    
+                </div>
+            </div>
+            <div class="card">
+                <figure>
+                    <img src="../img/wmacetas.jpg" alt="wmacetas">
+                </figure>
+                <div class="contenido">
+                    <h3>Efecto Piedra</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
+                        veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
+                        quis corporis minima!</p>
+                    <a href="../pages/contacto.html"> Inscribite!</a>    
+                </div>
+            </div>
+    
+        </div>
+        <br><br>
         <footer>
             <div class="ig">
                 <h3>Seguinos en Instagram!</h3>
