--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -32,10 +32,46 @@
     <div class="containerCards">
         <div class="card">
             <figure>
-                <img src="../img/wencuadernacion.jpg" alt="wcuadernos">
+                <img src="../img/tarte.jpg" alt="tarte">
             </figure>
             <div class="contenido">
-                <h3>Encuadernación</h3>
+                <h3>Arte</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
+                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
+                    quis corporis minima!</p>
+                <a href="../pages/contacto.html"> Inscribite!</a>
+            </div>
+        </div>
+        <div class="card">
+            <figure>
+                <img src="../img/tdibujo.jpg" alt="tdibujo">
+            </figure>
+            <div class="contenido">
+                <h3>Dibujo</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
+                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
+                    quis corporis minima!</p>
+                <a href="../pages/contacto.html"> Inscribite!</a>
+            </div>
+        </div>
+        <div class="card">
+            <figure>
+                <img src="../img/tgrabado.jpg" alt="tgrabado">
+            </figure>
+            <div class="contenido">
+                <h3>Grabado</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime est ullam quidem, delectus dolor
+                    velit, blanditiis eos doloremque molestiae harum fugiat labore perspiciatis earum illum mollitia ad
+                    quisquam consectetur rem?</p>
+                <a href="../pages/contacto.html"> Inscribite!</a>
+            </div>
+        </div>
+        <div class="card">
+            <figure>
+                <img src="../img/tmusica.jpg" alt="tmusica">
+            </figure>
+            <div class="contenido">
+                <h3>Música</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
                     veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
                     quis corporis minima!</p>
@@ -44,22 +80,10 @@
         </div>
         <div class="card">
             <figure>
-                <img src="../img/wlettering.jpg" alt="wlettering">
+                <img src="../img/tteatro.jpg" alt="tteatro">
             </figure>
             <div class="contenido">
-                <h3>Lettering</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
-                    veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
-                    quis corporis minima!</p>
-                <a href="../pages/contacto.html"> Inscribite!</a>    
-            </div>
-        </div>
-        <div class="card">
-            <figure>
-                <img src="../img/wmacetas.jpg" alt="wmacetas">
-            </figure>
-            <div class="contenido">
-                <h3>Efecto Piedra</h3>
+                <h3>Teatro</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
                     veniam autem ratione inventore ad culpa ex voluptatum officiis, voluptatibus facere nisi eveniet
                     quis corporis minima!</p>
