--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -29,11 +29,14 @@
         </nav>
     </header>
     <br><br>
+    <!--Contenedor principal para cards (5 en total)-->
     <div class="containerCards">
+        <!--Contedor para cada card individual-->
         <div class="card">
             <figure>
                 <img src="../img/tarte.jpg" alt="tarte">
             </figure>
+            <!--Texto de la card-->
             <div class="contenido">
                 <h3>Arte</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error recusandae saepe, vitae facilis sunt
