--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
     <h1 class="title">Cascara Taller</h1>
 
     <section class="container1">
+        <!--Carousel con imagnes del taller-->
+        <div class="carousel">
+            <div class="carousel-item">
+                <img src="img/carousel1.jpg" alt="Imagen 1">
+            </div>
+            <div class="carousel-item">
+                <img src="img/carousel2.jpg" alt="Imagen 2">
+            </div>
+            <div class="carousel-item">
+                <img src="img/carousel3.jpg" alt="Imagen 3">
+            </div>
+            <div class="carousel-item">
+                <img src="img/carousel4.jpg" alt="Imagen 4"> 
+            </div>
+        </div>
+
         <!--Se completara con un texto personalizado para el taller acerca de su trayectoria-->
         <p class="acercade"><b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut
