--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,14 +46,14 @@
                 <!--Opcion por default desabilitada para que siempre deba elegir una opción disponible-->
                 <option selected="true" disabled="disabled" value="">Seleccione una opción...</option>
                 <option value="Arte">Arte</option>
-                <option value="Dibujo">Dibujo</option>
+                <option value="Dibujo">Dibujo y Manga</option>
                 <option value="Guitarra">Guitarra</option>
                 <option value="Grabado">Grabado</option>
                 <option value="Música">Música</option>
                 <option value="Teatro">Teatro</option>
                 <option value="Encuadernación">Encuadernación</option>
                 <option value="Lettering">Lettering</option>
-                <option value="Macetas">Macetas</option>
+                <option value="Efecto Piedra">Efecto Piedra</option>
             </select>
             <br>
             <label for="mensaje">Mensaje:</label>
