--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,7 +46,7 @@
                 <!--Opcion por default desabilitada para que siempre deba elegir una opción disponible-->
                 <option selected="true" disabled="disabled" value="">Seleccione una opción...</option>
                 <option value="Arte">Arte</option>
-                <option value="Dibujo">Dibujo y Manga</option>
+                <option value="Dibujo y Manga">Dibujo y Manga</option>
                 <option value="Guitarra">Guitarra</option>
                 <option value="Grabado">Grabado</option>
                 <option value="Música">Música</option>
